<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Calendar</string>
    <string name="what_label">What</string>
    <string name="where_label">Where</string>
    <string name="when_label">When</string>
    <string name="timezone_label">Time zone</string>
    <string name="attendees_label">Guests</string>
    <string name="repeats_label">Repetition</string>
    <string name="no_title_label">(No title)</string>
    <plurals name="Nminutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> minutes</item>
    </plurals>
    <plurals name="Nmins">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="Nhours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="Ndays">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="weekN">
        
        <item quantity="other">WEEK <xliff:g id="count">%d</xliff:g></item>
    </plurals>
    <string name="calendar_refresh"> "Refresh"</string>
    <string name="show_day_view">"Show day"</string>
    <string name="agenda_view">"Agenda"</string>
    <string name="day_view">"Day"</string>
    <string name="week_view">"Week"</string>
    <string name="month_view">"Month"</string>
    <string name="event_view">"View event"</string>
    <string name="event_create">"New event"</string>
    <string name="event_edit">"Edit event"</string>
    <string name="event_delete">"Delete event"</string>
    <string name="goto_today">"Today"</string>
    <string name="menu_preferences">"Settings"</string>
    <string name="menu_select_visible_calendars">"Calendars to display"</string>
    <string name="search">"Search"</string>
    <string name="hide_controls">"Hide controls"</string>
    <string name="show_controls">"Show controls"</string>
    <string name="select_visible_calendars_title">"Calendars to display"</string>
    <string name="synced"> synced</string>
    <string name="not_synced"> not synced</string>
    <string name="acct_not_synced">This account isn\'t being synced so your calendars may
        not be up-to-date.</string>
    <string name="accounts">Accounts &amp; sync</string>
    <string name="select_synced_calendars_title">Calendars to sync</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">"Event name"</string>
    <string name="hint_where">"Location"</string>
    <string name="hint_description">"Description"</string>
    <string name="hint_attendees">"Guests"</string>
    <string name="creating_event">"Event created."</string>
    <string name="saving_event">"Event saved."</string>
    <string name="empty_event">"Empty event not created."</string>
    <string name="creating_event_with_guest">"Invitations sent."</string>
    <string name="saving_event_with_guest">"Updates sent."</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="edit_event_show_all">Show all</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Add reminder</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">Before you can add an event, you must add at least one Calendar account to your device and make a calendar visible. Touch Add Account to add an account (if you just added an account, wait for it to finish syncing and try again). Or touch Cancel and make sure at least one calendar is visible.</string>
    <string name="create_an_account_desc">"Calendar works better with a Google Account.\n\n\u2022 Access it from any web browser\n\u2022 Back up your events securely"</string>
    <string name="add_account">Add account</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_desc_more">More</string>
    <string name="event_info_desc_less">Less</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="agenda_today">TODAY, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_yesterday">YESTERDAY, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="agenda_tomorrow">TOMORROW, <xliff:g id="date">%1$s</xliff:g></string>
    <string name="loading">Loading\u2026</string>
    <string name="show_older_events">Touch to view events before <xliff:g id="oldest_search_range">%1$s</xliff:g></string>
    <string name="show_newer_events">Touch to view events after <xliff:g id="newest_search_range">%1$s</xliff:g></string>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">"Details"</string>
    <string name="edit_label">"Edit"</string>
    <string name="delete_label">"Delete"</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Cancel</string>
    <string name="snooze_all_label">"Snooze all"</string>
    <string name="dismiss_all_label">"Dismiss all"</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="daily">Daily</string>
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <string name="weekly">"Weekly (every <xliff:g id="days_of_week">%s</xliff:g>)"</string>
    <string name="monthly_on_day_count">"Monthly (every <xliff:g id="ordinal_number">%1$s</xliff:g> <xliff:g id="day_of_week">%2$s</xliff:g>)"</string>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="monthly_on_day">"Monthly (on day <xliff:g id="day_of_month">%s</xliff:g>)"</string>
    <string name="yearly">"Yearly (on <xliff:g id="dates">%s</xliff:g>)"</string>
    <string name="custom" product="default">"Custom (can\'t customize on phone)"</string>
    <string name="modify_event">Change only this event</string>
    <string name="modify_all">Change all events in the series</string>
    <string name="modify_all_following">Change this and all future events</string>
    <string name="new_event_dialog_label">"New event"</string>
    <string name="new_event_dialog_option">"New event"</string>
    <string name="delete_this_event_title">Delete this event?</string>
    <string name="change_response_title">Change response</string>
    <string name="menu_general_preferences">General settings</string>
    <string name="menu_about_preferences">About Calendar</string>
    <string name="preferences_title">"Settings"</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_reminder_title">Reminder settings</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_default">-1</string>
    <string name="preferences_clear_search_history_title">Clear search history</string>
    <string name="preferences_clear_search_history_summary">Remove all the searches you\'ve performed</string>
    <string name="search_history_cleared">Search history cleared.</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="preferences_alerts_vibrateWhen_title">Vibrate</string>
    <string name="preferences_alerts_ringtone_title">Choose ringtone</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default">10</string>
    <string name="preferences_use_home_tz_title">Use home time zone</string>
    <string name="preferences_use_home_tz_descrip">Displays calendars and event times in your home time zone when traveling</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_home_tz_default">America/Los_Angeles</string>
    <string name="preferences_show_week_num_title">Show week number</string>
    <string name="preferences_about_title">About</string>
    <string name="preferences_build_version">Build version</string>
    <string-array name="prefEntries_alerts_vibrateWhen">
        
        <item>Always</item>
        
        <item>Only when silent</item>
        
        <item>Never</item>
    </string-array>
    <string translatable="false" name="prefDefault_alerts_vibrateWhen">never</string>
    <string translatable="false" name="prefDefault_alerts_vibrate_true">always</string>
    <string translatable="false" name="prefDefault_alerts_vibrate_false">never</string>
    <string-array translatable="false" name="prefValues_alerts_vibrateWhen">
        <item>always</item>
        <item>silent</item>
        <item>never</item>
    </string-array>
    <string name="prefDialogTitle_vibrateWhen">Vibrate</string>
    <string name="gadget_title">Calendar</string>
    <plurals name="month_more_events">
        
        <item quantity="one">"+1"</item>
        
        <item quantity="other">+<xliff:g id="number">%d</xliff:g></item>
    </plurals>
    <string name="gadget_no_events">No upcoming calendar events</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="tardis">TARDIS</string>
    <string name="copy_db">Send database</string>
    <string name="directory_searching_fmt">Searching <xliff:g id="domain">%s</xliff:g>\u2026</string>
    <string name="accessibility_remove_attendee">Remove attendee</string>
    <string name="accessibility_pick_start_date">Start date</string>
    <string name="accessibility_pick_start_time">Start time</string>
    <string name="accessibility_pick_end_date">End date</string>
    <string name="accessibility_pick_end_time">End time</string>
    <string name="accessibility_pick_time_zone">Time zone</string>
    <string name="accessibility_add_reminder">Add reminder</string>
    <string name="accessibility_remove_reminder">Remove reminder</string>
    <string name="accessibility_add_attendee">Add attendee</string>
    <string name="contacts_birthday">Contacts birthday</string>
    <string name="display_birthday">Display birthday</string>
    <string name="display_calendar">Diaplay calendar</string>
    <string name="select_all">Select all</string>
    <string name="task">Task</string>
    <string name="my_calendar">My Calendar</string>
    <string name="my_task">My Task</string>
    <string name="year_lable">Year</string>
    <string name="day_lable">Day</string>
    <string name="quick_head_below_visibility">@string/view_visible_value</string>
    <string name="expandable_list_empty" >Event list Empty!</string>
    <string name="event_delete_title">Delete event</string>
    <string name="all_events">All events</string>
</resources>