<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/delete_head_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cal_bg_top"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dip"
                android:contentDescription="@string/app_label"
                android:src="@drawable/calendar_icon_task_01_nomal" />

            <Button
                android:id="@+id/tv_activity_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/event_delete_title"
                android:textColor="#FFD7D7D7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/discard_label"
                android:textColor="#FFD7D7D7" />

            <Button
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/delete_label"
                android:textColor="#FFD7D7D7" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/event_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="@string/quick_head_below_visibility" >

        <SearchView
            android:id="@+id/searchView_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selectAll_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selectall_selector"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_weight="1"
            android:padding="8dip"
            android:text="@string/all_events"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FF7FD3EC"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/checkBox_selectAll_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="-10dip"
            android:button="@drawable/checkbox_button_selector"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ExpandableListView
            android:id="@+id/calendarExpandable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:groupIndicator="@null" />

        <TextView
            android:id="@+id/emptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/expandable_list_empty"
            android:textColor="@color/btn_text_gray"
            android:textSize="21sp"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>