<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cal_bg_top"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="left|center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgBtn_backToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dip"
            android:clickable="true"
            android:contentDescription="@string/app_label"
            android:src="@drawable/bt_viewtype_change" />

        <ImageView
            android:id="@+id/img_splaner_noitems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dip"
            android:clickable="true"
            android:contentDescription="@string/app_label"
            android:src="@drawable/splaner_noitems" />

        <TextView
            android:id="@+id/tv_display_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_calendar"
            android:textColor="#FFD7D7D7"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <View
            android:id="@+id/img_dv1"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="1dip"
            android:background="#FF625856"
            />
        <!-- android:background="@color/white"  -->

        <TextView
            android:id="@+id/btn_cancal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dip"
            android:background="@drawable/bt_transparent_selector"
            android:clickable="true"
            android:text="@string/discard_label"
            android:textColor="#FFCBCBCB"
            android:textSize="18sp" />

        <View
            android:id="@+id/img_dv2"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="1dip"
            android:background="#FF625856" />
            <!-- android:background="@color/white" -->

        <TextView
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dip"
            android:background="@drawable/bt_transparent_selector"
            android:clickable="true"
            android:text="@string/save_label"
            android:textColor="#FFCBCBCB"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>